Added "lang" and "xml:lang" attributes to this "<html>" element

--- a/tests/sample_data/link_extractor/linkextractor.html
+++ b/tests/sample_data/link_extractor/linkextractor.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang = "en" xml:lang="en">
   <head>
     <base href='http://example.com' />
     <title>Sample page with links for testing LinkExtractor</title>
